tests/test-files/parse-toplevel.txt
================================================================================
Parse toplevel
================================================================================

(package coalton-unit-tests)

(monomorphize)
(declare x UFix)
(define x 2)

================================================================================
Malformed toplevel form
================================================================================

(package test-package)

((define) x 5)

--------------------------------------------------------------------------------

error: Malformed toplevel form
  --> test:3:1
   |
 3 |  ((define) x 5)
   |   ^^^^^^^^ unexpected list

================================================================================
Invalid toplevel form
================================================================================

(package test-package)

(unknown)

--------------------------------------------------------------------------------

error: Invalid toplevel form
  --> test:3:1
   |
 3 |  (unknown)
   |   ^^^^^^^ unknown toplevel form
